--- a/NAMESPACE
+++ b/NAMESPACE
@@ -227,6 +227,7 @@ export(block)
 export(block_hrf)
 export(blockids)
 export(blocklens)
+export(build_afni_stims)
 export(cells)
 export(column_contrast)
 export(conditions)
@@ -277,6 +278,7 @@ export(get_benchmark_summary)
 export(get_data_matrix)
 export(global_onsets)
 export(hrf)
+export(hrf_basis_lwu)
 export(hrf_blocked)
 export(hrf_bspline)
 export(hrf_fourier)
@@ -286,6 +288,7 @@ export(hrf_half_cosine)
 export(hrf_inv_logit)
 export(hrf_lagged)
 export(hrf_library)
+export(hrf_lwu)
 export(hrf_mexhat)
 export(hrf_set)
 export(hrf_sine)
@@ -317,6 +320,7 @@ export(pair_contrast)
 export(pairwise_contrasts)
 export(plot_contrasts)
 export(poly_contrast)
+export(predict.ParametricBasis)
 export(read_fmri_config)
 export(regressor)
 export(regressors)
@@ -391,13 +395,13 @@ importFrom(neuroim2,FileBackedNeuroVec)
 importFrom(neuroim2,NeuroVecSeq)
 importFrom(neuroim2,series)
 importFrom(neuroim2,vectors)
+importFrom(numDeriv,grad)
 importFrom(plotly,animation_opts)
 importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
 importFrom(purrr,compact)
 importFrom(purrr,imap)
 importFrom(purrr,map)
-importFrom(purrr,map_chr)
 importFrom(purrr,map_dfr)
 importFrom(purrr,map_lgl)
 importFrom(purrr,partial)
@@ -405,7 +409,6 @@ importFrom(purrr,pmap)
 importFrom(purrr,set_names)
 importFrom(rlang,"%||%")
 importFrom(rlang,.data)
-importFrom(rlang,abort)
 importFrom(rlang,as_label)
 importFrom(rlang,call_args)
 importFrom(rlang,call_name)
