--- a/NAMESPACE
+++ b/NAMESPACE
@@ -200,7 +200,6 @@ export(AFNI_HRF)
 export(BSpline)
 export(Fcontrasts)
 export(HRF)
-export(HRF_BSPLINE)
 export(HRF_GAMMA)
 export(HRF_GAUSSIAN)
 export(HRF_SPMG1)
@@ -339,6 +338,7 @@ export(standard_error)
 export(stats)
 export(sub_basis)
 export(term_indices)
+export(term_matrices)
 export(to_glt)
 export(translate_legacy_pattern)
 export(trialwise)
