--- a/NAMESPACE
+++ b/NAMESPACE
@@ -366,6 +366,7 @@ importFrom(cli,cli_progress_update)
 importFrom(cli,cli_text)
 importFrom(cli,cli_ul)
 importFrom(cli,cli_verbatim)
+importFrom(deflist,deflist)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,bind_cols)
@@ -376,6 +377,8 @@ importFrom(dplyr,select)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,where)
+importFrom(foreach,"%dopar%")
+importFrom(foreach,foreach)
 importFrom(furrr,future_map)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
