--- a/NAMESPACE
+++ b/NAMESPACE
@@ -137,6 +137,8 @@ S3method(nbasis,hrfspec)
 S3method(onsets,Reg)
 S3method(onsets,convolved_term)
 S3method(onsets,event_term)
+S3method(penalty_matrix,HRF)
+S3method(penalty_matrix,hrfspec)
 S3method(plot,baseline_model)
 S3method(plot,fmri_model)
 S3method(plot_contrasts,event_model)
@@ -200,6 +202,8 @@ export(AFNI_HRF)
 export(BSpline)
 export(Fcontrasts)
 export(HRF)
+export(HRF_BSPLINE)
+export(HRF_FIR)
 export(HRF_GAMMA)
 export(HRF_GAUSSIAN)
 export(HRF_SPMG1)
@@ -275,6 +279,8 @@ export(generate_interaction_contrast)
 export(generate_main_effect_contrast)
 export(get_benchmark_summary)
 export(get_data_matrix)
+export(glm_lss)
+export(glm_ols)
 export(global_onsets)
 export(hrf)
 export(hrf_basis_lwu)
@@ -317,6 +323,7 @@ export(onsets)
 export(p_values)
 export(pair_contrast)
 export(pairwise_contrasts)
+export(penalty_matrix)
 export(plot_contrasts)
 export(poly_contrast)
 export(predict.ParametricBasis)
@@ -430,6 +437,7 @@ importFrom(rlang,is_formula)
 importFrom(rlang,is_list)
 importFrom(rlang,is_quosure)
 importFrom(rlang,is_symbol)
+importFrom(rlang,new_formula)
 importFrom(rlang,quo_get_expr)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
