Implement fast_rlm_run core logic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -471,4 +471,5 @@ importFrom(utils,head)
 importFrom(utils,modifyList)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
+importFrom(matrixStats,rowMedians)
 useDynLib(fmrireg)
