Add hrf_from_coefficients utility

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -139,6 +139,7 @@ S3method(onsets,convolved_term)
 S3method(onsets,event_term)
 S3method(penalty_matrix,HRF)
 S3method(penalty_matrix,hrfspec)
+S3method(hrf_from_coefficients,HRF)
 S3method(plot,baseline_model)
 S3method(plot,fmri_model)
 S3method(plot_contrasts,event_model)
@@ -300,6 +301,7 @@ export(hrf_sine)
 export(hrf_smoothing_kernel)
 export(hrf_spmg1)
 export(hrf_time)
+export(hrf_from_coefficients)
 export(hrf_toeplitz)
 export(interaction_contrast)
 export(is_categorical)
