Add condition_basis_list helper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -235,6 +235,7 @@ export(build_afni_stims)
 export(cells)
 export(column_contrast)
 export(conditions)
+export(condition_basis_list)
 export(contrast)
 export(contrast_set)
 export(contrast_weights)
