Add reconstruction_matrix for HRF objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -140,6 +140,7 @@ S3method(onsets,event_term)
 S3method(penalty_matrix,HRF)
 S3method(penalty_matrix,hrfspec)
 S3method(hrf_from_coefficients,HRF)
+S3method(reconstruction_matrix,HRF)
 S3method(plot,baseline_model)
 S3method(plot,fmri_model)
 S3method(plot_contrasts,event_model)
@@ -303,6 +304,7 @@ export(hrf_smoothing_kernel)
 export(hrf_spmg1)
 export(hrf_time)
 export(hrf_from_coefficients)
+export(reconstruction_matrix)
 export(hrf_toeplitz)
 export(interaction_contrast)
 export(is_categorical)
