Add fmri_lm_config object and factory

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -356,6 +356,7 @@ export(translate_legacy_pattern)
 export(trialwise)
 export(unit_contrast)
 export(write_glt)
+export(fmri_lm_control)
 import(assertthat)
 import(cli)
 import(ggplot2)
