--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -80,14 +80,15 @@ Collate:
     'RcppExports.R'
     'afni.R'
     'all_generic.R'
-    'autoplot-methods.R'
     'ar_utils.R'
+    'autoplot-methods.R'
     'baseline_model.R'
     'basis.R'
     'benchmark_datasets.R'
     'beta_utils.R'
     'bootstrap.R'
     'con_stats.R'
+    'condition_basis_list.R'
     'contrast.R'
     'covariate.R'
     'data_fmri_benchmark_datasets.R'
@@ -98,10 +99,15 @@ Collate:
     'event_model_helpers.R'
     'event_model.R'
     'event_vector.R'
+    'fmri_ar_modeling.R'
     'fmri_betas.R'
     'fmri_dataset.R'
     'fmri_latent_lm.R'
+    'fmri_lm_config.R'
+    'fmri_lm_context.R'
+    'fmri_lm_solver.R'
     'fmri_model.R'
+    'fmri_robust_fitting.R'
     'fmrilm.R'
     'fmrireg.R'
     'fmrirlm.R'
@@ -112,12 +118,14 @@ Collate:
     'hrf-functions.R'
     'hrf.R'
     'hrf_decorators.R'
+    'hrf_from_coefficients.R'
     'hrf_smoothing_kernel.R'
     'lss.R'
     'metafuns.R'
     'mixed_solve.R'
     'naming-utils.R'
     'penalty_matrix.R'
+    'reconstruction_matrix.R'
     'reg-constructor.R'
     'reg-methods.R'
     'regressor.R'
