--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,7 @@ S3method(get_mask,fmri_mem_dataset)
 S3method(get_mask,latent_dataset)
 S3method(get_mask,matrix_dataset)
 S3method(global_onsets,sampling_frame)
+S3method(hrf_from_coefficients,HRF)
 S3method(is_categorical,event)
 S3method(is_categorical,event_term)
 S3method(is_continuous,event)
@@ -139,8 +140,6 @@ S3method(onsets,convolved_term)
 S3method(onsets,event_term)
 S3method(penalty_matrix,HRF)
 S3method(penalty_matrix,hrfspec)
-S3method(hrf_from_coefficients,HRF)
-S3method(reconstruction_matrix,HRF)
 S3method(plot,baseline_model)
 S3method(plot,fmri_model)
 S3method(plot_contrasts,event_model)
@@ -167,12 +166,14 @@ S3method(print,event_model)
 S3method(print,event_term)
 S3method(print,fmri_dataset)
 S3method(print,fmri_lm)
+S3method(print,fmri_lm_config)
 S3method(print,fmri_model)
 S3method(print,fmri_rlm)
 S3method(print,fmri_term)
 S3method(print,latent_dataset)
 S3method(print,poly_contrast_spec)
 S3method(print,sampling_frame)
+S3method(reconstruction_matrix,HRF)
 S3method(regressors,event_term)
 S3method(run,afni_lm_spec)
 S3method(samples,sampling_frame)
@@ -235,8 +236,8 @@ export(blocklens)
 export(build_afni_stims)
 export(cells)
 export(column_contrast)
-export(conditions)
 export(condition_basis_list)
+export(conditions)
 export(contrast)
 export(contrast_set)
 export(contrast_weights)
@@ -268,6 +269,7 @@ export(fitted_hrf)
 export(fmri_dataset)
 export(fmri_latent_lm)
 export(fmri_lm)
+export(fmri_lm_control)
 export(fmri_mem_dataset)
 export(fmri_model)
 export(fmri_rlm)
@@ -290,6 +292,7 @@ export(hrf_basis_lwu)
 export(hrf_blocked)
 export(hrf_bspline)
 export(hrf_fourier)
+export(hrf_from_coefficients)
 export(hrf_gamma)
 export(hrf_gaussian)
 export(hrf_half_cosine)
@@ -303,8 +306,6 @@ export(hrf_sine)
 export(hrf_smoothing_kernel)
 export(hrf_spmg1)
 export(hrf_time)
-export(hrf_from_coefficients)
-export(reconstruction_matrix)
 export(hrf_toeplitz)
 export(interaction_contrast)
 export(is_categorical)
@@ -333,6 +334,7 @@ export(plot_contrasts)
 export(poly_contrast)
 export(predict.ParametricBasis)
 export(read_fmri_config)
+export(reconstruction_matrix)
 export(regressor)
 export(regressors)
 export(samples)
@@ -356,7 +358,6 @@ export(translate_legacy_pattern)
 export(trialwise)
 export(unit_contrast)
 export(write_glt)
-export(fmri_lm_control)
 import(assertthat)
 import(cli)
 import(ggplot2)
@@ -405,6 +406,7 @@ importFrom(ggplot2,scale_color_brewer)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_minimal)
 importFrom(lazyeval,f_eval)
+importFrom(matrixStats,rowMedians)
 importFrom(memoise,memoise)
 importFrom(methods,setGeneric)
 importFrom(neuroim2,FileBackedNeuroVec)
@@ -477,5 +479,4 @@ importFrom(utils,head)
 importFrom(utils,modifyList)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
-importFrom(matrixStats,rowMedians)
 useDynLib(fmrireg)
