Fix chunking issues and modular component tests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -93,6 +93,7 @@ Collate:
     'covariate.R'
     'data_fmri_benchmark_datasets.R'
     'design_plot.R'
+    'effective_df.R'
     'evaluate-helpers.R'
     'utils-internal.R'
     'event-classes.R'
@@ -103,12 +104,19 @@ Collate:
     'fmri_betas.R'
     'fmri_dataset.R'
     'fmri_latent_lm.R'
+    'fmri_lm_chunkwise.R'
     'fmri_lm_config.R'
     'fmri_lm_context.R'
+    'fmri_lm_internal.R'
+    'fmri_lm_methods.R'
+    'fmri_lm_runwise.R'
     'fmri_lm_solver.R'
+    'fmri_lm_strategies.R'
     'fmri_model.R'
+    'fmri_model_utils.R'
     'fmri_robust_fitting.R'
     'fmrilm.R'
+    'fmrilm_new.R'
     'fmrireg.R'
     'fmrirlm.R'
     'gen_contrast.R'
@@ -130,5 +138,6 @@ Collate:
     'reg-methods.R'
     'regressor.R'
     'sampling_frame.R'
+    'sandwich_variance_doc.R'
     'simulate.R'
     'zzz.R'
