--- a/NAMESPACE
+++ b/NAMESPACE
@@ -246,6 +246,7 @@ export(convolve_design)
 export(correlation_map)
 export(covariate)
 export(create_design_matrix_from_benchmark)
+export(create_fmri_model)
 export(data_chunks)
 export(design_map)
 export(design_matrix)
@@ -377,6 +378,7 @@ importFrom(cli,cli_li)
 importFrom(cli,cli_progress_bar)
 importFrom(cli,cli_progress_done)
 importFrom(cli,cli_progress_update)
+importFrom(cli,cli_rule)
 importFrom(cli,cli_text)
 importFrom(cli,cli_ul)
 importFrom(cli,cli_verbatim)
@@ -385,6 +387,7 @@ importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,do)
+importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
@@ -453,12 +456,16 @@ importFrom(splines,bs)
 importFrom(stats,approx)
 importFrom(stats,approxfun)
 importFrom(stats,arima.sim)
+importFrom(stats,as.formula)
 importFrom(stats,convolve)
 importFrom(stats,dgamma)
 importFrom(stats,dnorm)
+importFrom(stats,formula)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
+importFrom(stats,pf)
 importFrom(stats,poly)
+importFrom(stats,pt)
 importFrom(stats,quantile)
 importFrom(stats,reformulate)
 importFrom(stats,rexp)
