--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,8 @@ S3method(event_table,convolved_term)
 S3method(event_table,covariate_convolved_term)
 S3method(event_table,event_term)
 S3method(event_terms,fmri_model)
+S3method(fit_contrasts,default)
+S3method(fit_contrasts,fmri_lm)
 S3method(fitted_hrf,fmri_lm)
 S3method(formula,event_term)
 S3method(get_formula,fmri_model)
@@ -221,6 +223,7 @@ export(event_term)
 export(event_terms)
 export(event_variable)
 export(feature_suffix)
+export(fit_contrasts)
 export(fitted_hrf)
 export(fmri_dataset)
 export(fmri_latent_lm)
