Fix write_results functionality and add comprehensive BIDS export - Major fixes: dimensional mismatch in beta export, adaptive system for event vs all-coefficient data, JSON metadata formula fix, RegressorOrder array handling, comprehensive test suite, scientific design preservation, improved error handling, BIDS compliance. All tests now pass (0 failures, 0 errors).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(Fcontrasts,convolved_term)
 S3method(Fcontrasts,event_model)
 S3method(Fcontrasts,event_term)
 S3method(ar_parameters,fmri_lm)
+S3method(as.array,NeuroVec)
 S3method(as.character,AFNI_HRF)
 S3method(autoplot,Reg)
 S3method(baseline_terms,fmri_model)
@@ -67,6 +68,7 @@ S3method(design_matrix,baseline_term)
 S3method(design_matrix,convolved_term)
 S3method(design_matrix,event_model)
 S3method(design_matrix,event_term)
+S3method(design_matrix,fmri_lm)
 S3method(design_matrix,fmri_model)
 S3method(elements,event)
 S3method(elements,event_term)
@@ -164,6 +166,7 @@ S3method(terms,event_model)
 S3method(terms,fmri_model)
 S3method(to_glt,contrast)
 S3method(write_glt,glt_contrast)
+S3method(write_results,fmri_lm)
 export(.resample_param)
 export(AFNI_HRF)
 export(BSpline)
@@ -289,10 +292,10 @@ export(sub_basis)
 export(term_indices)
 export(term_matrices)
 export(to_glt)
-export(translate_legacy_pattern)
 export(trialwise)
 export(unit_contrast)
 export(write_glt)
+export(write_results)
 import(assertthat)
 import(cli)
 import(fmridataset)
@@ -369,6 +372,9 @@ importFrom(fmrihrf,reconstruction_matrix)
 importFrom(fmrihrf,regressor)
 importFrom(fmrihrf,samples)
 importFrom(fmrihrf,sampling_frame)
+importFrom(fmrilss,lss)
+importFrom(fmrilss,lss_naive)
+importFrom(fmrilss,mixed_solve)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(furrr,future_map)
