--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ Depends:
     R (>= 4.0.0)
 Imports:
     fmrihrf (>= 0.1.0),
+    fmrilss (>= 0.1.0),
     stats,
     Matrix,
     RANN,
@@ -77,7 +78,8 @@ Remotes:
     bbuchsbaum/fmristore,
     anthonynorth/roxyglobals,
     bbuchsbaum/fmridataset,
-    bbuchsbaum/fmrihrf
+    bbuchsbaum/fmrihrf,
+    bbuchsbaum/fmrilss
 VignetteBuilder: knitr
 URL: https://bbuchsbaum.github.io/fmrireg/, https://github.com/bbuchsbaum/fmrireg
 BugReports: https://github.com/bbuchsbaum/fmrireg/issues
@@ -91,12 +93,14 @@ Collate:
     'basis.R'
     'benchmark_datasets.R'
     'beta_utils.R'
+    'bids_export.R'
     'bootstrap.R'
     'con_stats.R'
     'condition_basis_list.R'
     'contrast.R'
     'covariate.R'
     'data_fmri_benchmark_datasets.R'
+    'design_matrix-fmri_lm.R'
     'design_plot.R'
     'effective_df.R'
     'utils-internal.R'
@@ -129,6 +133,7 @@ Collate:
     'fmridataset-imports.R'
     'fmrihrf-imports.R'
     'fmrilm.R'
+    'fmrilss-imports.R'
     'fmrireg.R'
     'fmrirlm.R'
     'gen_contrast.R'
@@ -139,6 +144,7 @@ Collate:
     'metafuns.R'
     'mixed_solve.R'
     'naming-utils.R'
+    'neuroim2-methods.R'
     'sandwich_variance_doc.R'
     'simulate.R'
     'utils_operators.R'
