Add contrasts accessors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,10 @@ S3method(contrast_weights,oneway_contrast_spec)
 S3method(contrast_weights,pair_contrast_spec)
 S3method(contrast_weights,poly_contrast_spec)
 S3method(contrast_weights,unit_contrast_spec)
+S3method(contrasts,event_model)
+S3method(contrasts,event_term)
+S3method(contrasts,fmri_model)
+S3method(contrasts,hrfspec)
 S3method(convolve,event_term)
 S3method(correlation_map,baseline_model)
 S3method(correlation_map,fmri_model)
