export run generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -280,6 +280,7 @@ export(read_fmri_config)
 export(reconstruction_matrix)
 export(regressor)
 export(regressors)
+export(run)
 export(samples)
 export(sampling_frame)
 export(sanitize)
