Make fmri_lm a generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -235,6 +235,8 @@ export(fitted_hrf)
 export(fmri_dataset)
 export(fmri_latent_lm)
 export(fmri_lm)
+S3method(fmri_lm,formula)
+S3method(fmri_lm,fmri_model)
 export(fmri_lm_control)
 export(fmri_mem_dataset)
 export(fmri_model)
