--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(ar_parameters,fmri_lm)
 S3method(as.array,NeuroVec)
 S3method(autoplot,Reg)
 S3method(baseline_terms,fmri_model)
+S3method(blockids,event_model)
 S3method(blocklens,fmri_model)
 S3method(cells,fmri_model)
 S3method(coef,fmri_latent_lm)
@@ -41,10 +42,12 @@ S3method(get_covariates,group_data)
 S3method(get_formula,fmri_model)
 S3method(get_subjects,group_data)
 S3method(longnames,convolved_term)
+S3method(longnames,event_model)
 S3method(longnames,event_seq)
 S3method(longnames,event_term)
 S3method(n_subjects,group_data)
 S3method(nbasis,convolved_term)
+S3method(p_values,fmri_lm)
 S3method(plot,fmri_model)
 S3method(print,fmri_lm)
 S3method(print,fmri_lm_config)
@@ -140,6 +143,8 @@ export(fmri_lm_control)
 export(fmri_mem_dataset)
 export(fmri_meta)
 export(fmri_meta_fit)
+export(fmri_meta_fit_contrasts)
+export(fmri_meta_fit_cov)
 export(fmri_meta_fit_extended)
 export(fmri_model)
 export(fmri_ols_fit)
@@ -174,6 +179,7 @@ export(latent_dataset)
 export(list_benchmark_datasets)
 export(load_benchmark_dataset)
 export(longnames)
+export(lowrank_control)
 export(matrix_dataset)
 export(meta_effective_n)
 export(meta_fit_vcov_cpp)
