--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ S3method(summary,spatial_fdr_result)
 S3method(term_matrices,fmri_model)
 S3method(terms,fmri_model)
 S3method(tidy,fmri_meta)
+S3method(tidy,fmri_lm)
 S3method(write_results,fmri_lm)
 S3method(write_results,fmri_meta)
 S3method(zscores,fmri_meta)
