--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,8 +72,8 @@ S3method(summary,group_data)
 S3method(summary,spatial_fdr_result)
 S3method(term_matrices,fmri_model)
 S3method(terms,fmri_model)
-S3method(tidy,fmri_meta)
 S3method(tidy,fmri_lm)
+S3method(tidy,fmri_meta)
 S3method(write_results,fmri_lm)
 S3method(write_results,fmri_meta)
 S3method(zscores,fmri_meta)
@@ -101,6 +101,8 @@ export(cells)
 export(coef_image)
 export(column_contrast)
 export(columns)
+export(compute_lm_contrasts)
+export(compute_lm_contrasts_from_suffstats)
 export(condition_basis_list)
 export(conditions)
 export(construct)
@@ -136,6 +138,9 @@ export(event_variable)
 export(extract_csv_data)
 export(feature_suffix)
 export(fit_contrasts)
+export(fit_glm_from_suffstats)
+export(fit_glm_on_transformed_series)
+export(fit_glm_with_config)
 export(fitted_hrf)
 export(flip_sign)
 export(fmri_dataset)
@@ -205,7 +210,10 @@ export(r_to_z)
 export(read_fmri_config)
 export(read_h5_full)
 export(read_nifti_full)
+export(register_basis)
+export(register_engine)
 export(regressor)
+export(resolve_basis)
 export(samples)
 export(sampling_frame)
 export(sanitize)
